--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,367 +1,509 @@
----
----
-
-
-
-@inproceedings{QPM+23:BlindHub,
-  bibtex_show={true},
-  selected	= {true},
-  abbr		= {CORE Rank: A*},
-  pdf		= {https://eprint.iacr.org/2022/1735.pdf},
-  code = {https://github.com/blind-channel/blind-hub},
-      author = {Xianrui Qin and Shimin Pan and Arash Mirzaei and Zhimei Sui and O\u{g}uzhan Ersoy and Amin Sakzad and Muhammed F. Esgin and Joseph K. Liu and Jiangshan Yu and Tsz Hon Yuen},
-      title = {{BlindHub}: {Bitcoin}-Compatible Privacy-Preserving Payment Channel Hubs Supporting Variable Amounts},
-      booktitle = {{IEEE} Symposium on Security and Privacy (S\&P)},
-  series    = {Lecture Notes in Computer Science},
-  volume    = {},
-  pages     = {2462--2480},
-  publisher = {Springer},
-  year      = {2023},
-  note		= {(Full version at \url{ia.cr/2022/1735})}
+@article{DBLP:journals/iacr/AlbrechtFLN23,
+  bibtex_show  = {true},
+  pdf          = {https://eprint.iacr.org/2023/1469.pdf},
+  abbr         = {Preprint},
+  author       = {Martin R. Albrecht and
+                  Giacomo Fenzi and
+                  Oleksandra Lapiha and
+                  Ngoc Khanh Nguyen},
+  title        = {{SLAP:} Succinct Lattice-Based Polynomial Commitments from Standard
+                  Assumptions},
+  journal      = {{IACR} Cryptol. ePrint Arch.},
+  pages        = {1469},
+  year         = {2023},
+  url          = {https://eprint.iacr.org/2023/1469},
+  timestamp    = {Sat, 07 Oct 2023 01:00:00 +0200},
+  biburl       = {https://dblp.org/rec/journals/iacr/AlbrechtFLN23.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  selected     = {true}
 }
 
-@inproceedings{ESLR23,
-  bibtex_show={true},
-  selected	= {true},
-  pdf		= {https://eprint.iacr.org/2022/141.pdf},
-  video = {https://www.youtube.com/watch?v=lXeHwoJJ9UA&list=PLeeS-3Ml-rpq6m4DK_dARhLhIW31SE2pn&t=311s},
-  abbr		= {CORE Rank: A*},
-  code    = {https://gitlab.com/raykzhao/lav},
-      author = {Muhammed F.  Esgin and Ron Steinfeld and Dongxi Liu and Sushmita Ruj},
-      title = {Efficient Hybrid Exact/Relaxed Lattice Proofs and Applications to Rounding and {VRFs}},
-      booktitle = {{CRYPTO}},
-      series    = {Lecture Notes in Computer Science},
-      volume    = {},
-  pages     = {},
-  publisher = {Springer},
-  year      = {2023},
-  note		= {(Full version at \url{ia.cr/2022/141})}
+
+@article{DBLP:journals/iacr/FenziN23,
+  bibtex_show  = {true},
+  pdf          = {https://eprint.iacr.org/2023/846.pdf},
+  abbr         = {Preprint},
+  author       = {Giacomo Fenzi and Hossein Moghaddas and Ngoc Khanh Nguyen},
+  title        = {Lattice-Based Polynomial Commitments: Towards Asymptotic and Concrete Efficiency},
+  journal      = {{IACR} Cryptol. ePrint Arch.},
+  pages        = {846},
+  year         = {2023},
+  url          = {https://eprint.iacr.org/2023/846},
+  timestamp    = {Mon, 24 Jul 2023 11:51:01 +0200},
+  biburl       = {https://dblp.org/rec/journals/iacr/FenziN23.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
-@misc{SSEK23,
-  bibtex_show={true},
-  selected	= {true},
-  pdf		= {https://eprint.iacr.org/2022/1690.pdf},
-      author = {Ron Steinfeld and Amin Sakzad and Muhammed F. Esgin and Veronika Kuchta},
-      title = {Private Re-Randomization for Module {LWE} and Applications to Quasi-Optimal {ZK-SNARKs}},
-      howpublished = {Cryptology ePrint Archive, Paper 2022/1690},
-      year = {2022},
-      note = {\url{https://eprint.iacr.org/2022/1690}},
-      url = {https://eprint.iacr.org/2022/1690}
-}
-
-@inproceedings{EEK+23,
-  bibtex_show={true},
-  selected	= {true},
-code		= {https://gitlab.com/raykzhao/ivrf},
-  pdf		= {https://eprint.iacr.org/2022/993.pdf},
-  abbr		= {CORE Rank: A},
-  author = {Muhammed F. Esgin and Oguzhan Ersoy and Veronika Kuchta and Julian Loss and Amin Sakzad and Ron Steinfeld and Wayne Yang and Raymond K. Zhao},
-  title = {A New Look at Blockchain Leader Election: Simple, Efficient, Sustainable and Post-Quantum},
-  booktitle = {ACM Asia Conference on Computer and Communications Security (ACM AsiaCCS)},
-  series    = {},
-  volume    = {},
-  pages     = {},
-  publisher = {ACM},
-  year      = {2023}
-}
-
-@article{BDE+22:Survey,
-  bibtex_show={true},
-  selected	= {true},
-  abbr		= {CORE Rank: A*},
-  pdf		= {https://eprint.iacr.org/2022/1151.pdf},
-      author = {Maxime Buser and Rafael Dowsley and Muhammed F. Esgin and Clémentine Gritti and Shabnam Kasra Kermanshahi and Veronika Kuchta and Jason T. LeGrow and Joseph K. Liu and Raphael C.-W. Phan and Amin Sakzad and Ron Steinfeld and Jiangshan Yu},
-      title = {A Survey on Exotic Signatures for Post-Quantum Blockchain: Challenges \& Research Directions},
-      journal = {ACM Computing Surveys},
-      year = {2022},
-      note = {\url{https://eprint.iacr.org/2022/1151}},
-      url = {https://eprint.iacr.org/2022/1151}
-      }
-
-@inproceedings{DESS22,
-  bibtex_show={true},
-  abbr		= {CORE Rank: B},
-  pdf		= {https://eprint.iacr.org/2022/1757.pdf},
-  author    = {Xiaohui Ding and
-               Muhammed F. Esgin and
-               Amin Sakzad and
-               Ron Steinfeld},
-  title     = {An Injectivity Analysis of Crystals-Kyber and Implications on Quantum
-               Security},
-  booktitle = {Australasian Conference on Information Security and Privacy {(ACISP)}},
-  series    = {Lecture Notes in Computer Science},
-  volume    = {13494},
-  pages     = {332--351},
-  publisher = {Springer},
-  year      = {2022},
-  note		= {(Full version at \url{ia.cr/2022/1757})}
-}
-
-@inproceedings{ESZ22a,
-  bibtex_show={true},
-  pdf		= {https://eprint.iacr.org/2021/545.pdf},
-  abbr		= {CORE Rank: A*},
-  code		= {https://gitlab.com/raykzhao/matrict_plus},
-  video		= {https://www.youtube.com/watch?v=sWdckoTaao0},
-  author    = {Muhammed F. Esgin and
-               Ron Steinfeld and
-               Raymond K. Zhao},
-  title     = {{MatRiCT}\(^+\): More Efficient Post-Quantum Private Blockchain
-               Payments},
-  booktitle = {{IEEE} Symposium on Security and Privacy (S\&P)},
-  pages     = {1281--1298},
-  publisher = {{IEEE}},
-  year      = {2022},
-  note		= {(Full version at \url{ia.cr/2021/545})}
-}
-
-@inproceedings{ESZ22b,
-  bibtex_show={true},
-  pdf		= {https://eprint.iacr.org/2022/142.pdf},
-  abbr		= {CORE Rank: B},
-  video		= {https://www.youtube.com/watch?v=gHwRq0e3ziM},
-  code		= {https://gitlab.com/raykzhao/matrict_au},
-  author    = {Muhammed F. Esgin and
-               Ron Steinfeld and
-               Raymond K. Zhao},
-  title     = {Efficient Verifiable Partially-Decryptable Commitments from Lattices
-               and Applications},
-  booktitle = {Public Key Cryptography (PKC) {(1)}},
-  series    = {Lecture Notes in Computer Science},
-  volume    = {13177},
-  pages     = {317--348},
-  publisher = {Springer},
-  year      = {2022},
-  note		= {(Full version at \url{ia.cr/2022/142})}
-}
-
-@inproceedings{BDE+22,
-  bibtex_show={true},
-  pdf		= {https://eprint.iacr.org/2021/302.pdf},
-  abbr		= {CORE Rank: A},
-  author    = {Maxime Buser and Rafael Dowsley and Muhammed F.  Esgin and Shabnam Kasra Kermanshahi and Veronika Kuchta and Joseph K.  Liu and Raphael Phan and Zhenfei Zhang},
-  title     = {Post-Quantum Verifiable Random Function from Symmetric Primitives in {PoS} Blockchain},
-  booktitle = {ESORICS},
-  series    = {Lecture Notes in Computer Science},
-  volume    = {},
-  pages     = {},
-  publisher = {Springer},
-  year      = {2022},
-  note		= {(Full version at \url{ia.cr/2021/302})}
-}
-
-@inproceedings{EKSSZSC21,
-  bibtex_show={true},
-  pdf		= {https://eprint.iacr.org/2020/1222.pdf},
-  abbr		= {CORE Rank: A},
-  code		= {https://github.com/zhenfeizhang/lb-vrf},
-  video		= {https://www.youtube.com/watch?v=bQ6iyc3y_JM},
-  author    = {Muhammed F. Esgin and
-               Veronika Kuchta and
-               Amin Sakzad and
-               Ron Steinfeld and
-               Zhenfei Zhang and
-               Shifeng Sun and
-               Shumo Chu},
-  title     = {Practical Post-quantum Few-Time Verifiable Random Function with Applications
-               to Algorand},
-  booktitle = {Financial Cryptography (FC) {(2)}},
-  series    = {Lecture Notes in Computer Science},
-  volume    = {12675},
-  pages     = {560--578},
-  publisher = {Springer},
-  year      = {2021},
-  note		= {(Full version at \url{ia.cr/2020/1222})}
-}
-
-@inproceedings{YELAD21,
-  bibtex_show={true},
-  pdf		= {https://eprint.iacr.org/2021/1213.pdf},
-  abbr		= {CORE Rank: A*},
-  video		= {https://www.youtube.com/watch?v=OPRQTrQjQ7M},
-  author    = {Tsz Hon Yuen and
-               Muhammed F. Esgin and
-               Joseph K. Liu and
-               Man Ho Au and
-               Zhimin Ding},
-  title     = {{DualRing}: Generic Construction of Ring Signatures with Efficient Instantiations},
-  booktitle = {{CRYPTO} {(1)}},
-  series    = {Lecture Notes in Computer Science},
-  volume    = {12825},
-  pages     = {251--281},
-  publisher = {Springer},
-  year      = {2021},
-  note		= {(Full version at \url{ia.cr/2021/1213})}
-}
-
-@inproceedings{YSLAEZG20,
-  bibtex_show={true},
-  pdf		= {https://eprint.iacr.org/2019/508.pdf},
-  abbr		= {CORE Rank: A},
-  author    = {Tsz Hon Yuen and
-               Shi{-}Feng Sun and
-               Joseph K. Liu and
-               Man Ho Au and
-               Muhammed F. Esgin and
-               Qingzhao Zhang and
-               Dawu Gu},
-  title     = {{RingCT} 3.0 for Blockchain Confidential Transaction: Shorter Size and
-               Stronger Security},
-  booktitle = {Financial Cryptography (FC)},
-  series    = {Lecture Notes in Computer Science},
-  volume    = {12059},
-  pages     = {464--483},
-  publisher = {Springer},
-  year      = {2020},
-  note		= {(Full version at \url{ia.cr/2019/508})}
-}
-
-@inproceedings{EEE20,
-  bibtex_show={true},
-  pdf		= {https://eprint.iacr.org/2020/845.pdf},
-  abbr		= {CORE Rank: A},
-  video		= {https://www.youtube.com/watch?v=k4-Hp77rn-g},
-  author    = {Muhammed F. Esgin and
-               O\u{g}uzhan Ersoy and
-               Zekeriya Erkin},
-  title     = {Post-Quantum Adaptor Signatures and Payment Channel Networks},
-  booktitle = {{ESORICS} {(2)}},
-  series    = {Lecture Notes in Computer Science},
-  volume    = {12309},
-  pages     = {378--397},
-  publisher = {Springer},
-  year      = {2020},
-  note		= {(Full version at \url{ia.cr/2020/845})}
-}
-
-@inproceedings{ENS20,
-  bibtex_show={true},
-  pdf		= {https://eprint.iacr.org/2020/518.pdf},
-  abbr		= {CORE Rank: A},
-  video		= {https://www.youtube.com/watch?v=4y8QWStFl50},
-  author    = {Muhammed F. Esgin and
-               Ngoc Khanh Nguyen and
-               Gregor Seiler},
-  title     = {Practical Exact Proofs from Lattices: New Techniques to Exploit Fully-Splitting
-               Rings},
-  booktitle = {{ASIACRYPT} {(2)}},
-  series    = {Lecture Notes in Computer Science},
-  volume    = {12492},
-  pages     = {259--288},
-  publisher = {Springer},
-  year      = {2020},
-  note		= {(Full version at \url{ia.cr/2020/518})}
+@article{DBLP:journals/iacr/BeullensLNS23,
+  bibtex_show  ={true},
+  pdf          = {https://eprint.iacr.org/2023/077.pdf},
+  abbr         = {ACM CCS},
+  author       = {Ward Beullens and
+                  Vadim Lyubashevsky and
+                  Ngoc Khanh Nguyen and
+                  Gregor Seiler},
+  title        = {Lattice-Based Blind Signatures: Short, Efficient, and Round-Optimal},
+  journal      = {{IACR} Cryptol. ePrint Arch.},
+  pages        = {77},
+  year         = {2023},
+  url          = {https://eprint.iacr.org/2023/077},
+  timestamp    = {Tue, 28 Feb 2023 00:00:00 +0100},
+  biburl       = {https://dblp.org/rec/journals/iacr/BeullensLNS23.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
 
 
-@inproceedings{ESLL19,
+@inproceedings{DBLP:conf/crypto/BootleLNS23,
   bibtex_show={true},
-  pdf		= {https://eprint.iacr.org/2019/445.pdf},
-  abbr		= {CORE Rank: A*},
-  video		= {https://www.youtube.com/watch?v=p-louO6GdO8},
-  author    = {Muhammed F. Esgin and
-               Ron Steinfeld and
-               Joseph K. Liu and
-               Dongxi Liu},
-  title     = {Lattice-Based Zero-Knowledge Proofs: New Techniques for Shorter and
-               Faster Constructions and Applications},
-  booktitle = {{CRYPTO} {(1)}},
-  series    = {Lecture Notes in Computer Science},
-  volume    = {11692},
-  pages     = {115--146},
-  publisher = {Springer},
-  year      = {2019},
-  note		= {(Full version at \url{ia.cr/2019/445})}
-}
-
-@inproceedings{EZSLL19,
-  bibtex_show={true},
-  pdf		= {https://eprint.iacr.org/2019/1287.pdf},
-  abbr		= {CORE Rank: A*},
-  author    = {Muhammed F. Esgin and
-               Raymond K. Zhao and
-               Ron Steinfeld and
-               Joseph K. Liu and
-               Dongxi Liu},
-  title     = {{MatRiCT}: Efficient, Scalable and Post-Quantum Blockchain Confidential
-               Transactions Protocol},
-  booktitle = {{ACM} {SIGSAC} Conference on Computer and
-               Communications Security {(CCS)}},
-  pages     = {567--584},
-  publisher = {{ACM}},
-  year      = {2019},
-  note		= {(Full version at \url{ia.cr/2019/1287})}
-}
-
-@inproceedings{ESSLL19,
-  bibtex_show={true},
-  pdf		= {https://eprint.iacr.org/2018/773.pdf},
-  abbr		= {CORE Rank: B},
-  author    = {Muhammed F. Esgin and
-               Ron Steinfeld and
-               Amin Sakzad and
-               Joseph K. Liu and
-               Dongxi Liu},
-  title     = {Short Lattice-Based One-out-of-Many Proofs and Applications to Ring
-               Signatures},
-  booktitle = {Applied Cryptography and Network Security {(ACNS)}},
-  series    = {Lecture Notes in Computer Science},
-  volume    = {11464},
-  pages     = {67--88},
-  publisher = {Springer},
-  year      = {2019},
-  note		= {(Full version at \url{ia.cr/2018/773})}
-}
-
-@article{KE19,
-  bibtex_show={true},
-  pdf		= {https://eprint.iacr.org/2020/046.pdf},
-  abbr		= {CORE Rank: A*},
-  author    = {Orhun Kara and
-               Muhammed F. Esgin},
-  title     = {On Analysis of Lightweight Stream Ciphers with Keyed Update},
-  journal   = {{IEEE} Trans. Computers},
-  volume    = {68},
-  number    = {1},
-  pages     = {99--110},
-  year      = {2019}
+  abbr         = {CRYPTO},
+  pdf		= {https://eprint.iacr.org/2023/560.pdf},
+  author       = {Jonathan Bootle and
+                  Vadim Lyubashevsky and
+                  Ngoc Khanh Nguyen and
+                  Alessandro Sorniotti},
+  editor       = {Helena Handschuh and
+                  Anna Lysyanskaya},
+  title        = {A Framework for Practical Anonymous Credentials from Lattices},
+  booktitle    = {Advances in Cryptology - {CRYPTO} 2023 - 43rd Annual International
+                  Cryptology Conference, {CRYPTO} 2023, Santa Barbara, CA, USA, August
+                  20-24, 2023, Proceedings, Part {II}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {14082},
+  pages        = {384--417},
+  publisher    = {Springer},
+  year         = {2023},
+  url          = {https://doi.org/10.1007/978-3-031-38545-2\_13},
+  doi          = {10.1007/978-3-031-38545-2\_13},
+  timestamp    = {Mon, 14 Aug 2023 16:16:25 +0200},
+  biburl       = {https://dblp.org/rec/conf/crypto/BootleLNS23.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  selected     = {true}
 }
 
 
-
-
-
-
-
-
-@inproceedings{EK15,
-  bibtex_show={true},
-  pdf		= {https://eprint.iacr.org/2015/289.pdf},
-  abbr		= {CORE Rank: B},
-  author    = {Muhammed F. Esgin and
-               Orhun Kara},
-  title     = {Practical Cryptanalysis of Full {Sprout} with {TMD} Tradeoff Attacks},
-  booktitle = {Selected Areas in Cryptography {(SAC)}},
-  series    = {Lecture Notes in Computer Science},
-  volume    = {9566},
-  pages     = {67--85},
-  publisher = {Springer},
-  year      = {2015}
+@phdthesis{DBLP:phd/basesearch/Nguyen22,
+  bibtex_show  = {true},
+  pdf          = {https://www.research-collection.ethz.ch/bitstream/handle/20.500.11850/574844/PhD_Thesis-3.pdf?sequence=1},
+  abbr         = {PhD Thesis},
+  author       = {Ngoc Khanh Nguyen},
+  title        = {Lattice-Based Zero-Knowledge Proofs Under a Few Dozen Kilobytes},
+  school       = {{ETH} Zurich, Z{\"{u}}rich, Switzerland},
+  year         = {2022},
+  url          = {https://hdl.handle.net/20.500.11850/574844},
+  doi          = {10.3929/ETHZ-B-000574844},
+  timestamp    = {Thu, 02 Mar 2023 00:00:00 +0100},
+  biburl       = {https://dblp.org/rec/phd/basesearch/Nguyen22.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
-@inproceedings{EKU15,
-  bibtex_show={true},
-  pdf		= {https://eprint.iacr.org/2015/642.pdf},
-  author    = {Muhammed F. Esgin and
-               Mehmet Sabir Kiraz and
-               Osmanbey Uzunkol},
-  title     = {A New Partial Key Exposure Attack on Multi-power {RSA}},
-  booktitle = {Conference on Algebraic Informatics {(CAI)}},
-  series    = {Lecture Notes in Computer Science},
-  volume    = {9270},
-  pages     = {103--114},
-  publisher = {Springer},
-  year      = {2015}
+@inproceedings{DBLP:conf/asiacrypt/LyubashevskyN22,
+  bibtex_show  = {true},
+  pdf          = {https://eprint.iacr.org/2022/1307.pdf},
+  abbr         = {ASIACRYPT},
+  author       = {Vadim Lyubashevsky and
+                  Ngoc Khanh Nguyen},
+  editor       = {Shweta Agrawal and
+                  Dongdai Lin},
+  title        = {{BLOOM:} Bimodal Lattice One-out-of-Many Proofs and Applications},
+  booktitle    = {Advances in Cryptology - {ASIACRYPT} 2022 - 28th International Conference
+                  on the Theory and Application of Cryptology and Information Security,
+                  Taipei, Taiwan, December 5-9, 2022, Proceedings, Part {IV}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {13794},
+  pages        = {95--125},
+  publisher    = {Springer},
+  year         = {2022},
+  url          = {https://doi.org/10.1007/978-3-031-22972-5\_4},
+  doi          = {10.1007/978-3-031-22972-5\_4},
+  timestamp    = {Fri, 10 Feb 2023 00:00:00 +0100},
+  biburl       = {https://dblp.org/rec/conf/asiacrypt/LyubashevskyN22.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+
+@inproceedings{DBLP:conf/crypto/LyubashevskyNP22,
+  bibtex_show  = {true},
+  pdf          = {https://eprint.iacr.org/2022/284.pdf},
+  abbr         = {CRYPTO}, 
+  author       = {Vadim Lyubashevsky and
+                  Ngoc Khanh Nguyen and
+                  Maxime Plan{\c{c}}on},
+  editor       = {Yevgeniy Dodis and
+                  Thomas Shrimpton},
+  title        = {Lattice-Based Zero-Knowledge Proofs and Applications: Shorter, Simpler,
+                  and More General},
+  booktitle    = {Advances in Cryptology - {CRYPTO} 2022 - 42nd Annual International
+                  Cryptology Conference, {CRYPTO} 2022, Santa Barbara, CA, USA, August
+                  15-18, 2022, Proceedings, Part {II}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {13508},
+  pages        = {71--101},
+  publisher    = {Springer},
+  year         = {2022},
+  url          = {https://doi.org/10.1007/978-3-031-15979-4\_3},
+  doi          = {10.1007/978-3-031-15979-4\_3},
+  timestamp    = {Sun, 13 Nov 2022 00:00:00 +0100},
+  biburl       = {https://dblp.org/rec/conf/crypto/LyubashevskyNP22.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org},
+  note         = {Best Abstract Video Award},
+  selected     = {true},
+}
+
+@inproceedings{DBLP:conf/crypto/NguyenS22,
+  bibtex_show  = {true},
+  pdf          = {https://eprint.iacr.org/2022/1048.pdf},
+  abbr         = {CRYPTO}, 
+  author       = {Ngoc Khanh Nguyen and
+                  Gregor Seiler},
+  editor       = {Yevgeniy Dodis and
+                  Thomas Shrimpton},
+  title        = {Practical Sublinear Proofs for {R1CS} from Lattices},
+  booktitle    = {Advances in Cryptology - {CRYPTO} 2022 - 42nd Annual International
+                  Cryptology Conference, {CRYPTO} 2022, Santa Barbara, CA, USA, August
+                  15-18, 2022, Proceedings, Part {II}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {13508},
+  pages        = {133--162},
+  publisher    = {Springer},
+  year         = {2022},
+  url          = {https://doi.org/10.1007/978-3-031-15979-4\_5},
+  doi          = {10.1007/978-3-031-15979-4\_5},
+  timestamp    = {Wed, 19 Oct 2022 01:00:00 +0200},
+  biburl       = {https://dblp.org/rec/conf/crypto/NguyenS22.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/pkc/0001TW22,
+  bibtex_show={true},
+  pdf          = {https://eprint.iacr.org/2021/888.pdf},
+  abbr         = {PKC},
+  author       = {Ngoc Khanh Nguyen and
+                  Eftychios Theodorakis and
+                  Bogdan Warinschi},
+  editor       = {Goichiro Hanaoka and
+                  Junji Shikata and
+                  Yohei Watanabe},
+  title        = {Lifting Standard Model Reductions to Common Setup Assumptions},
+  booktitle    = {Public-Key Cryptography - {PKC} 2022 - 25th {IACR} International Conference
+                  on Practice and Theory of Public-Key Cryptography, Virtual Event,
+                  March 8-11, 2022, Proceedings, Part {II}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {13178},
+  pages        = {130--160},
+  publisher    = {Springer},
+  year         = {2022},
+  url          = {https://doi.org/10.1007/978-3-030-97131-1\_5},
+  doi          = {10.1007/978-3-030-97131-1\_5},
+  timestamp    = {Thu, 10 Mar 2022 11:26:10 +0100},
+  biburl       = {https://dblp.org/rec/conf/pkc/0001TW22.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/pkc/Lyubashevsky0P22,
+  bibtex_show  = {true},
+  pdf          = {https://eprint.iacr.org/2022/006.pdf},
+  abbr         = {PKC},
+  author       = {Vadim Lyubashevsky and
+                  Ngoc Khanh Nguyen and
+                  Maxime Plan{\c{c}}on},
+  editor       = {Goichiro Hanaoka and
+                  Junji Shikata and
+                  Yohei Watanabe},
+  title        = {Efficient Lattice-Based Blind Signatures via Gaussian One-Time Signatures},
+  booktitle    = {Public-Key Cryptography - {PKC} 2022 - 25th {IACR} International Conference
+                  on Practice and Theory of Public-Key Cryptography, Virtual Event,
+                  March 8-11, 2022, Proceedings, Part {II}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {13178},
+  pages        = {498--527},
+  publisher    = {Springer},
+  year         = {2022},
+  url          = {https://doi.org/10.1007/978-3-030-97131-1\_17},
+  doi          = {10.1007/978-3-030-97131-1\_17},
+  timestamp    = {Thu, 10 Mar 2022 00:00:00 +0100},
+  biburl       = {https://dblp.org/rec/conf/pkc/Lyubashevsky0P22.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@inproceedings{DBLP:conf/asiacrypt/LyubashevskyNPS21,
+  bibtex_show={true},
+  pdf          = {https://eprint.iacr.org/2021/1575.pdf}, 
+  abbr         = {ASIACRYPT},
+  author       = {Vadim Lyubashevsky and
+                  Ngoc Khanh Nguyen and
+                  Maxime Plan{\c{c}}on and
+                  Gregor Seiler},
+  editor       = {Mehdi Tibouchi and
+                  Huaxiong Wang},
+  title        = {Shorter Lattice-Based Group Signatures via "Almost Free" Encryption
+                  and Other Optimizations},
+  booktitle    = {Advances in Cryptology - {ASIACRYPT} 2021 - 27th International Conference
+                  on the Theory and Application of Cryptology and Information Security,
+                  Singapore, December 6-10, 2021, Proceedings, Part {IV}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {13093},
+  pages        = {218--248},
+  publisher    = {Springer},
+  year         = {2021},
+  url          = {https://doi.org/10.1007/978-3-030-92068-5\_8},
+  doi          = {10.1007/978-3-030-92068-5\_8},
+  timestamp    = {Fri, 03 Dec 2021 17:36:41 +0100},
+  biburl       = {https://dblp.org/rec/conf/asiacrypt/LyubashevskyNPS21.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/crypto/LyubashevskyNS21,
+  bibtex_show={true},
+  pdf          = {https://eprint.iacr.org/2021/564.pdf},
+  abbr         = {CRYPTO},
+  author       = {Vadim Lyubashevsky and
+                  Ngoc Khanh Nguyen and
+                  Gregor Seiler},
+  editor       = {Tal Malkin and
+                  Chris Peikert},
+  title        = {{SMILE:} Set Membership from Ideal Lattices with Applications to Ring
+                  Signatures and Confidential Transactions},
+  booktitle    = {Advances in Cryptology - {CRYPTO} 2021 - 41st Annual International
+                  Cryptology Conference, {CRYPTO} 2021, Virtual Event, August 16-20,
+                  2021, Proceedings, Part {II}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {12826},
+  pages        = {611--640},
+  publisher    = {Springer},
+  year         = {2021},
+  url          = {https://doi.org/10.1007/978-3-030-84245-1\_21},
+  doi          = {10.1007/978-3-030-84245-1\_21},
+  timestamp    = {Mon, 16 Aug 2021 09:08:14 +0200},
+  biburl       = {https://dblp.org/rec/conf/crypto/LyubashevskyNS21.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/esorics/BootleLNS21,
+  bibtex_show={true},
+  pdf          = {https://eprint.iacr.org/2020/1449.pdf},
+  abbr         = {ESORICS},
+  author       = {Jonathan Bootle and
+                  Vadim Lyubashevsky and
+                  Ngoc Khanh Nguyen and
+                  Gregor Seiler},
+  editor       = {Elisa Bertino and
+                  Haya Schulmann and
+                  Michael Waidner},
+  title        = {More Efficient Amortization of Exact Zero-Knowledge Proofs for {LWE}},
+  booktitle    = {Computer Security - {ESORICS} 2021 - 26th European Symposium on Research
+                  in Computer Security, Darmstadt, Germany, October 4-8, 2021, Proceedings,
+                  Part {II}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {12973},
+  pages        = {608--627},
+  publisher    = {Springer},
+  year         = {2021},
+  url          = {https://doi.org/10.1007/978-3-030-88428-4\_30},
+  doi          = {10.1007/978-3-030-88428-4\_30},
+  timestamp    = {Tue, 17 Oct 2023 10:41:56 +0200},
+  biburl       = {https://dblp.org/rec/conf/esorics/BootleLNS21.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/pkc/Lyubashevsky0S21,
+  bibtex_show={true},
+  pdf          = {https://eprint.iacr.org/2020/1448.pdf},
+  abbr         = {PKC},
+  author       = {Vadim Lyubashevsky and
+                  Ngoc Khanh Nguyen and
+                  Gregor Seiler},
+  editor       = {Juan A. Garay},
+  title        = {Shorter Lattice-Based Zero-Knowledge Proofs via One-Time Commitments},
+  booktitle    = {Public-Key Cryptography - {PKC} 2021 - 24th {IACR} International Conference
+                  on Practice and Theory of Public Key Cryptography, Virtual Event,
+                  May 10-13, 2021, Proceedings, Part {I}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {12710},
+  pages        = {215--241},
+  publisher    = {Springer},
+  year         = {2021},
+  url          = {https://doi.org/10.1007/978-3-030-75245-3\_9},
+  doi          = {10.1007/978-3-030-75245-3\_9},
+  timestamp    = {Fri, 07 May 2021 15:40:46 +0200},
+  biburl       = {https://dblp.org/rec/conf/pkc/Lyubashevsky0S21.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@inproceedings{DBLP:conf/asiacrypt/Esgin0S20,
+  bibtex_show={true},
+  pdf          = {https://eprint.iacr.org/2020/518.pdf},
+  abbr         = {ASIACRYPT},
+  author       = {Muhammed F. Esgin and
+                  Ngoc Khanh Nguyen and
+                  Gregor Seiler},
+  editor       = {Shiho Moriai and
+                  Huaxiong Wang},
+  title        = {Practical Exact Proofs from Lattices: New Techniques to Exploit Fully-Splitting
+                  Rings},
+  booktitle    = {Advances in Cryptology - {ASIACRYPT} 2020 - 26th International Conference
+                  on the Theory and Application of Cryptology and Information Security,
+                  Daejeon, South Korea, December 7-11, 2020, Proceedings, Part {II}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {12492},
+  pages        = {259--288},
+  publisher    = {Springer},
+  year         = {2020},
+  url          = {https://doi.org/10.1007/978-3-030-64834-3\_9},
+  doi          = {10.1007/978-3-030-64834-3\_9},
+  timestamp    = {Thu, 10 Dec 2020 10:09:50 +0100},
+  biburl       = {https://dblp.org/rec/conf/asiacrypt/Esgin0S20.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/ccs/Lyubashevsky0S20,
+  bibtex_show={true},
+  pdf          = {https://eprint.iacr.org/2020/1183.pdf}, 
+  abbr         = {ACM CCS},
+  author       = {Vadim Lyubashevsky and
+                  Ngoc Khanh Nguyen and
+                  Gregor Seiler},
+  editor       = {Jay Ligatti and
+                  Xinming Ou and
+                  Jonathan Katz and
+                  Giovanni Vigna},
+  title        = {Practical Lattice-Based Zero-Knowledge Proofs for Integer Relations},
+  booktitle    = {{CCS} '20: 2020 {ACM} {SIGSAC} Conference on Computer and Communications
+                  Security, Virtual Event, USA, November 9-13, 2020},
+  pages        = {1051--1070},
+  publisher    = {{ACM}},
+  year         = {2020},
+  url          = {https://doi.org/10.1145/3372297.3417894},
+  doi          = {10.1145/3372297.3417894},
+  timestamp    = {Tue, 10 Nov 2020 19:56:39 +0100},
+  biburl       = {https://dblp.org/rec/conf/ccs/Lyubashevsky0S20.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/crypto/BootleL0S20,
+  bibtex_show={true},
+  pdf          = {https://eprint.iacr.org/2020/737.pdf},
+  abbr         = {CRYPTO},
+  author       = {Jonathan Bootle and
+                  Vadim Lyubashevsky and
+                  Ngoc Khanh Nguyen and
+                  Gregor Seiler},
+  editor       = {Daniele Micciancio and
+                  Thomas Ristenpart},
+  title        = {A Non-PCP Approach to Succinct Quantum-Safe Zero-Knowledge},
+  booktitle    = {Advances in Cryptology - {CRYPTO} 2020 - 40th Annual International
+                  Cryptology Conference, {CRYPTO} 2020, Santa Barbara, CA, USA, August
+                  17-21, 2020, Proceedings, Part {II}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {12171},
+  pages        = {441--469},
+  publisher    = {Springer},
+  year         = {2020},
+  url          = {https://doi.org/10.1007/978-3-030-56880-1\_16},
+  doi          = {10.1007/978-3-030-56880-1\_16},
+  timestamp    = {Wed, 26 Aug 2020 01:00:00 +0200},
+  biburl       = {https://dblp.org/rec/conf/crypto/BootleL0S20.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/crypto/HauckKL020,
+  bibtex_show={true},
+  pdf          = {https://eprint.iacr.org/2020/769.pdf},
+  abbr         = {CRYPTO},
+  author       = {Eduard Hauck and
+                  Eike Kiltz and
+                  Julian Loss and
+                  Ngoc Khanh Nguyen},
+  editor       = {Daniele Micciancio and
+                  Thomas Ristenpart},
+  title        = {Lattice-Based Blind Signatures, Revisited},
+  booktitle    = {Advances in Cryptology - {CRYPTO} 2020 - 40th Annual International
+                  Cryptology Conference, {CRYPTO} 2020, Santa Barbara, CA, USA, August
+                  17-21, 2020, Proceedings, Part {II}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {12171},
+  pages        = {500--529},
+  publisher    = {Springer},
+  year         = {2020},
+  url          = {https://doi.org/10.1007/978-3-030-56880-1\_18},
+  doi          = {10.1007/978-3-030-56880-1\_18},
+  timestamp    = {Wed, 26 Aug 2020 01:00:00 +0200},
+  biburl       = {https://dblp.org/rec/conf/crypto/HauckKL020.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/asiacrypt/000119,
+  bibtex_show={true},
+  pdf          = {https://eprint.iacr.org/2019/973.pdf},
+  abbr         = {ASIACRYPT},
+  author       = {Ngoc Khanh Nguyen},
+  editor       = {Steven D. Galbraith and
+                  Shiho Moriai},
+  title        = {On the Non-existence of Short Vectors in Random Module Lattices},
+  booktitle    = {Advances in Cryptology - {ASIACRYPT} 2019 - 25th International Conference
+                  on the Theory and Application of Cryptology and Information Security,
+                  Kobe, Japan, December 8-12, 2019, Proceedings, Part {II}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {11922},
+  pages        = {121--150},
+  publisher    = {Springer},
+  year         = {2019},
+  url          = {https://doi.org/10.1007/978-3-030-34621-8\_5},
+  doi          = {10.1007/978-3-030-34621-8\_5},
+  timestamp    = {Fri, 22 Nov 2019 13:52:52 +0100},
+  biburl       = {https://dblp.org/rec/conf/asiacrypt/000119.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/pkc/HofheinzN19,
+  bibtex_show={true},
+  pdf          = {https://eprint.iacr.org/2018/958.pdf},
+  abbr         = {PKC},
+  author       = {Dennis Hofheinz and
+                  Ngoc Khanh Nguyen},
+  editor       = {Dongdai Lin and
+                  Kazue Sako},
+  title        = {On Tightly Secure Primitives in the Multi-instance Setting},
+  booktitle    = {Public-Key Cryptography - {PKC} 2019 - 22nd {IACR} International Conference
+                  on Practice and Theory of Public-Key Cryptography, Beijing, China,
+                  April 14-17, 2019, Proceedings, Part {I}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {11442},
+  pages        = {581--611},
+  publisher    = {Springer},
+  year         = {2019},
+  url          = {https://doi.org/10.1007/978-3-030-17253-4\_20},
+  doi          = {10.1007/978-3-030-17253-4\_20},
+  timestamp    = {Fri, 01 May 2020 18:32:25 +0200},
+  biburl       = {https://dblp.org/rec/conf/pkc/HofheinzN19.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@inproceedings{DBLP:conf/acns/BernhardNW17,
+  bibtex_show={true},
+  pdf          = {https://eprint.iacr.org/2015/712},
+  abbr         = {ACNS},
+  author       = {David Bernhard and
+                  Ngoc Khanh Nguyen and
+                  Bogdan Warinschi},
+  editor       = {Dieter Gollmann and
+                  Atsuko Miyaji and
+                  Hiroaki Kikuchi},
+  title        = {Adaptive Proofs Have Straightline Extractors (in the Random Oracle
+                  Model)},
+  booktitle    = {Applied Cryptography and Network Security - 15th International Conference,
+                  {ACNS} 2017, Kanazawa, Japan, July 10-12, 2017, Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {10355},
+  pages        = {336--353},
+  publisher    = {Springer},
+  year         = {2017},
+  url          = {https://doi.org/10.1007/978-3-319-61204-1\_17},
+  doi          = {10.1007/978-3-319-61204-1\_17},
+  timestamp    = {Tue, 14 May 2019 10:00:54 +0200},
+  biburl       = {https://dblp.org/rec/conf/acns/BernhardNW17.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
