--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,14 +1,14 @@
 @article{DBLP:journals/iacr/AlbrechtFLN23,
   bibtex_show  = {true},
   pdf          = {https://eprint.iacr.org/2023/1469.pdf},
-  abbr         = {Preprint},
+  abbr         = {EUROCRYPT},
   author       = {Martin R. Albrecht and
                   Giacomo Fenzi and
                   Oleksandra Lapiha and
                   Ngoc Khanh Nguyen},
   title        = {{SLAP:} Succinct Lattice-Based Polynomial Commitments from Standard
                   Assumptions},
-  journal      = {{IACR} Cryptol. ePrint Arch.},
+  journal      = {EUROCRYPT 2024},
   pages        = {1469},
   year         = {2023},
   url          = {https://eprint.iacr.org/2023/1469},
