Master Thesis uploaded

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -480,6 +480,15 @@
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
+@phdthesis{MastersProjectNguyen,
+  bibtex_show  = {true},
+  pdf          = {},
+  abbr         = {Master Thesis},
+  author       = {Ngoc Khanh Nguyen},
+  title        = {Reduction Techniques in Computer Science},
+  school       = {University of Bristol},
+  year         = {2018}
+}
 
 @inproceedings{DBLP:conf/acns/BernhardNW17,
   bibtex_show={true},
