--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -482,7 +482,7 @@
 
 @phdthesis{MastersProjectNguyen,
   bibtex_show  = {true},
-  pdf          = {},
+  pdf          = {https://github.com/khanhcrypto/khanhcrypto.github.io/blob/master/assets/MASTERS_PROJECT.pdf},
   abbr         = {Master Thesis},
   author       = {Ngoc Khanh Nguyen},
   title        = {Reduction Techniques in Computer Science},
